--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "mongoose": "^5.9.23"
+    "mongodb": "^6.1.0",
+    "mongoose": "^5.9.23",
+    "validator": "^13.11.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
