--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "mongoose": "^5.9.23",
+    "serve-favicon": "^2.5.0",
     "validator": "^13.11.0"
   },
   "scripts": {
